# otus-cpp

./: .clang-format  CMakeLists.txt  Dockerfile  compose.yml  main.cpp
.github/workflows/: release.yml
ipfilter/: ipfilter.cpp  ipfilter.h
tests/: gtest_ipfilter.cpp  gtest_version.cpp
